# vcf-cribador

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  SECURITY.md
.commandcode/taste/: taste.md
.githooks/: install.sh  pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  release.yml
docs/: architecture.md  branch-protection.json  domain.md  events.md  implementation-guide.md  otel.md  product-card.md  roadmap.md  spec.md  tasks.md  test-plan.md
docs/adr/: README.md
scripts/: bump.sh  version.sh
specs/proteccion-main/: contract.md  scenarios.md  spec.md  test-plan.md
src/: error.rs  main.rs
src/application/: audit.rs  cribar.rs  export.rs  mod.rs  stats.rs
src/domain/: audit.rs  classification.rs  contact.rs  identity.rs  mod.rs  normalization.rs  rules.rs  screening.rs  verification.rs
src/infrastructure/: config.rs  csv_writer.rs  encoding.rs  json_writer.rs  mod.rs  parser.rs  source.rs  tsv_writer.rs  v3_compat.rs  writer.rs
src/interfaces/: cli.rs
tests/: integration_test.rs
tests/fixtures/: google_contactos-para-outlook.csv  google_contactos.csv  google_contactos.vcf  google_otroscontactos.vcf  protonContacts-2026-07-07.vcf  sample-contacts.vcf
